--- a/src/css/caroussel.css
+++ b/src/css/caroussel.css
@@ -70,7 +70,7 @@
    justify-content: center;
    align-items: center;
    margin-left: 400px;
-   background-color: rgb(194, 160, 98);
+   background-color: rgb(255,110,0,1);
    -webkit-box-shadow: 5px 5px 15px 5px #000000; 
    box-shadow: 5px 5px 15px 5px #000000;
 }
