--- a/src/css/formulaire.css
+++ b/src/css/formulaire.css
@@ -1,16 +1,5 @@
-body{
-    margin :0;
-    padding: 0;
-}
-
 .authscreen{
     height : 100%;
-    background: url('../../public/img/site/bg1.png') no-repeat center;
-    background-size: cover;
-    /* background-color: #202327;
-    background-repeat: none; */
-    /* background-image: url('../../public/img/site/bg1.png');
-    background-size: cover; */
     color : white;
     display : flex;
     flex-direction: column;
@@ -20,13 +9,24 @@ body{
 }
 
 .capsform{
-    /* border : 2px solid rgb(196, 159, 84); */
-    border-radius : 7px;
+    border-radius:10px;
     padding-bottom: 20px;
     width : 400px;
-    /* background-color: #202327; */
-    /* -webkit-box-shadow: 0px 0px 14px 5px #000000; 
-    box-shadow: 0px 0px 14px 5px #000000; */
+    background-color: rgb(84, 84, 84);
+    box-shadow: 0px 0px 7px 7px rgba(24, 24, 24, 0.50);
+    text-align: center;
+}
+h1{
+    font-family :Arial, Helvetica, sans-serif;
+    font-weight: bold;
+    color : white;
+}
+.titleform{
+    border-radius: 10px 10px 0px 0px;
+    margin-bottom: 5px;
+    height : 60px;
+    padding-top : 10px;
+    margin-bottom : 50px;
 }
 
 .fieldForm{
@@ -34,7 +34,7 @@ body{
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    margin : 10px;
+    margin : 20px;
     /* background-color: #202327; */
     animation: scale-up-center 0.4s cubic-bezier(0.390, 0.575, 0.565, 1.000) both;  
 }
@@ -49,20 +49,30 @@ body{
   
 
 input{
-    background-color : rgba(194, 160, 98, 0.803);
-    border : solid rgb(253, 226, 175);
-    border-radius : 5px;
+    background-color : rgba(24, 24, 24, 0);
+    border : solid rgba(255, 255, 255, 0.119);
+
+    border-top: none;
+    border-right : none;
+    /* border-left: none; */
+
     color : white;
     padding: 12px 10px;
     height : 40px;
     width : 350px;
     margin-left : auto;
     margin-right: auto;
+    margin-top: 5px;
+    margin-bottom: 5px;
+    /* box-shadow: 0px 0px 7px 7px rgba(24, 24, 24, 0.50); */
+
+}
+input::placeholder{
+    color :rgba(255, 255, 255, 0.549);
 }
 input:focus{
     outline: none;
-    border : solid rgb(255, 215, 136);
-    color : white;
+    border : solid rgb(rgba(255, 255, 255, 0.355));
 }
 
 .buttonform{
