--- a/src/css/header.css
+++ b/src/css/header.css
@@ -1,6 +1,6 @@
 .navigation{
-    background-color: #fefefe;
-    border-bottom: 2px solid #eac77b;
+    background-color: rgb(82, 81, 81);
+    border-bottom: 2px solid rgba(255,189,0,1);
     height : 70px;
     width : 100%;
     display : flex;
@@ -19,7 +19,7 @@
 }
 
 .navitem{
-    color : rgb(192, 137, 50);
+    color : rgba(255,189,0,1);
     display: flex;
     align-items: center;
     padding : 15px;
@@ -28,5 +28,14 @@
 .navitem:hover{
     text-shadow: 0px 0px 6px #e28432;
     color : white;
-    background-color: rgba(192, 138, 50, 0.513);
+    background-color: rgba(255,189,0,1);
+    animation: scale-up-center 0.4s cubic-bezier(0.390, 0.575, 0.565, 1.000) both;
 }
+/* @keyframes scale-up-center {
+    0% {
+      transform: scale(0.9);
+    }
+    100% {
+      transform: scale(1);
+    }
+  } */
