--- a/src/css/formulaire.css
+++ b/src/css/formulaire.css
@@ -1,14 +1,15 @@
 .authscreen{
     height : 100%;
     color : white;
-    display : flex;
-    flex-direction: column;
-    justify-content: center;
     padding-bottom: 20px;
-    align-items: center;
+
+    align-items: baseline;
+    display: flex;
+    justify-content: center;
 }
 
 .capsform{
+    margin-top : 100px;
     border-radius:10px;
     padding-bottom: 20px;
     width : 400px;
@@ -20,6 +21,7 @@ h1{
     font-family :Arial, Helvetica, sans-serif;
     font-weight: bold;
     color : white;
+    font-size : 40px;
 }
 .titleform{
     border-radius: 10px 10px 0px 0px;
@@ -118,4 +120,9 @@ input:focus{
 .textvalidscreen{
     margin-bottom: 10px;
     font-size: 30px;
+}
+#connect{
+    position : absolute;
+    right : 5px;
+    top : 5px;
 }
