--- a/src/css/formulaire.css
+++ b/src/css/formulaire.css
@@ -25,19 +25,15 @@ h1{
 }
 .titleform{
     border-radius: 10px 10px 0px 0px;
-    margin-bottom: 5px;
-    height : 60px;
-    padding-top : 10px;
-    margin-bottom : 50px;
+    padding : 10px;
 }
 
 .fieldForm{
     display : flex;
-    flex-direction: column;
+    flex-direction:row;
     align-items: center;
     justify-content: center;
     margin : 20px;
-    /* background-color: #202327; */
     animation: scale-up-center 0.4s cubic-bezier(0.390, 0.575, 0.565, 1.000) both;  
 }
 @keyframes scale-up-center {
@@ -66,7 +62,6 @@ input{
     margin-right: auto;
     margin-top: 5px;
     margin-bottom: 5px;
-    /* box-shadow: 0px 0px 7px 7px rgba(24, 24, 24, 0.50); */
 
 }
 input::placeholder{
@@ -122,7 +117,42 @@ input:focus{
     font-size: 30px;
 }
 #connect{
-    position : absolute;
+    position : fixed;
     right : 5px;
     top : 5px;
+}
+#logo{
+    height : 100px;
+}
+.icon-envelope , .icon-key, #icon-user{
+    color : rgb(255, 255, 255);
+    padding-left: 10px;
+    padding-right: 10px;
+    padding-top: 3px;
+    border-radius: 5px;
+    margin-right : 7px;
+    background: linear-gradient(90deg, rgba(255,189,0,1), rgba(255,110,0,1));
+    background-size: 400% 400%;
+    -webkit-animation: nanim 8s ease infinite;
+    -moz-animation: anim 8s ease infinite;
+    animation: anim 8s ease infinite;
+}
+@-webkit-keyframes anim {
+    0%{background-position:0% 46%}
+    50%{background-position:100% 55%}
+    100%{background-position:0% 46%}
+}
+@-moz-keyframes anim {
+    0%{background-position:0% 46%}
+    50%{background-position:100% 55%}
+    100%{background-position:0% 46%}
+}
+@keyframes anim {
+    0%{background-position:0% 46%}
+    50%{background-position:100% 55%}
+    100%{background-position:0% 46%}
+}
+.icon-envelope:hover , .icon-key:hover, .icon-user:hover{
+    text-shadow: none;
+    color : white;
 }
