--- a/src/musicfont/styles.css
+++ b/src/musicfont/styles.css
@@ -155,3 +155,66 @@
 .icon-sign-out:before {
   content: "\4d";
 }
+.icon-lock:before {
+  content: "\4e";
+}
+.icon-key:before {
+  content: "\4f";
+}
+.icon-envelope-o:before {
+  content: "\50";
+}
+.icon-envelope:before {
+  content: "\51";
+}
+.icon-mail:before {
+  content: "\52";
+}
+.icon-at-sign:before {
+  content: "\53";
+}
+.icon-angle-double-left:before {
+  content: "\54";
+}
+.icon-angle-double-right:before {
+  content: "\55";
+}
+.icon-angle-double-up:before {
+  content: "\56";
+}
+.icon-angle-double-down:before {
+  content: "\57";
+}
+.icon-bell:before {
+  content: "\58";
+}
+.icon-bell-o:before {
+  content: "\59";
+}
+.icon-bell-slash:before {
+  content: "\5a";
+}
+.icon-bell-slash-o:before {
+  content: "\30";
+}
+.icon-volume-off:before {
+  content: "\31";
+}
+.icon-volume-down:before {
+  content: "\32";
+}
+.icon-volume-up:before {
+  content: "\33";
+}
+.icon-note:before {
+  content: "\34";
+}
+.icon-volume:before {
+  content: "\35";
+}
+.icon-microphone:before {
+  content: "\36";
+}
+.icon-microphone-slash:before {
+  content: "\37";
+}
