--- a/src/css/search.css
+++ b/src/css/search.css
@@ -2,7 +2,7 @@
 display:flex
 }
 
-input{
+#inputSearch{
     background-color : rgba(24, 24, 24, 0);
     border : solid rgba(255, 255, 255, 0.119);
 
@@ -23,10 +23,10 @@ input{
     /* box-shadow: 0px 0px 7px 7px rgba(24, 24, 24, 0.50); */
 
 }
-input::placeholder{
+#inputSearch::placeholder{
     color :rgba(255, 255, 255, 0.549);
 }
-input:focus{
+#inputSearch:focus{
     outline: none;
     border : solid rgb(rgba(255, 255, 255, 0.355));
 }
