--- a/src/css/formulaire.css
+++ b/src/css/formulaire.css
@@ -133,7 +133,7 @@ input:focus{
     margin-right : 7px;
     background: linear-gradient(90deg, rgba(255,189,0,1), rgba(255,110,0,1));
     background-size: 400% 400%;
-    -webkit-animation: nanim 8s ease infinite;
+    -webkit-animation: anim 8s ease infinite;
     -moz-animation: anim 8s ease infinite;
     animation: anim 8s ease infinite;
 }
