--- a/src/css/caroussel.css
+++ b/src/css/caroussel.css
@@ -10,14 +10,13 @@
 }
 
 .imgcar{
-   float:left;
    position : fixed;
-   margin-left :1280px;
+   margin-left :800px;
    height : auto;
    width : 180px;
    border-radius: 10px;
-   z-index : 0;
-   /* visibility: hidden; */
+   z-index : 1;
+   opacity : 0;
 } 
 
 .imagcar:target{
@@ -28,7 +27,7 @@
    width : 5px;
    border-radius: 5px;
    background-color: rgb(180, 179, 179);
-   margin-left : 637px;
+   margin-left: 398px;
    height : 270px;
    position : fixed;
    z-index: 2;
@@ -43,15 +42,20 @@
 .blockajouer{
    height : 252px;
    width : 180px;
-   margin-left : 420px;
-   border : solid 5px rgb(55, 134, 72);
-   border-radius: 5px;
+   margin-top: 10px;
    position : fixed;
-   z-index: 2;
+   z-index: 3;
+   margin-left: 180px;
+   border : 5px solid rgb(255, 189, 0);
+   border-radius: 5px;
+   -webkit-box-shadow: 0px 0px 10px 5px #555454; 
+   box-shadow: 0px 0px 10px 5px #555454;
 }
 
-.content{
+#content{
    width: 1280px;
+   height : 280px;
+   margin-top: 10px;
 }
 
 .counter{
@@ -63,12 +67,13 @@
 .playerOption{
    border-radius: 5px;
    height : 50px;
+   width : 400px;
    display : flex;
    justify-content: center;
    align-items: center;
    background-color: rgb(204, 204, 204);
-   -webkit-box-shadow: 5px 5px 15px 5px #000000; 
-   box-shadow: 5px 5px 15px 5px #000000;
+   -webkit-box-shadow: 0px 0px 10px 5px #555454; 
+   box-shadow: 0px 0px 10px 5px #555454;
 }
 
 .playerOption i{
