--- a/src/css/player.css
+++ b/src/css/player.css
@@ -11,7 +11,10 @@
     width : 1280px;
     margin : 0px;
     height : 40px;
-    color : white;
+    color : rgba(255,189,0,1);
+    font-size: 35px;
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: bold;
     display : flex;
     justify-content: center;
     align-items: center;
