--- a/src/css/default.css
+++ b/src/css/default.css
@@ -56,5 +56,44 @@ a{
 	position:relative;
 	top:1px;
 }
-
+#logOutContent{
+    display : flex;
+    flex-direction: column;
+    align-items: center;
+    margin-top : 30px;
+    color : white;
+}
+#logOutText{
+    font-size : 35px;
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: bold;
+}
+#deconnexion{
+    border-radius: 28px;
+    border-style: none;
+    background: radial-gradient(circle, rgba(255,74,0,1) 0%, rgba(255,0,0,1) 100%);
+    font-size:17px;
+	padding:10px 20px;
+	text-decoration:none;
+    box-shadow: 0px 0px 5px 5px rgba(24, 24, 24, 0.20);
+    margin: 10px;
+    color : white;
+}
+#resterConnecter{
+    border-radius: 28px;
+    border-style: none;
+    background: radial-gradient(circle, rgba(0,193,11,1) 0%, rgba(0,138,8,1) 100%);
+    font-size:17px;
+	padding:10px 20px;
+	text-decoration:none;
+    box-shadow: 0px 0px 5px 5px rgba(24, 24, 24, 0.20);
+    margin: 10px;
+    color : white;
+}
+#deconnexion:hover{
+    box-shadow: 0px 0px 5px 5px rgba(255, 255, 255, 0.212);
+}
+#resterConnecter:hover{
+    box-shadow: 0px 0px 5px 5px rgba(255, 255, 255, 0.2);
+}
 
