--- a/src/css/header.css
+++ b/src/css/header.css
@@ -52,10 +52,18 @@ i:hover{
         animation-iteration-count: infinite;
 
 }
-#logout{
+#create{
     -webkit-animation: slide-top 1s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
         animation: slide-top 1s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
         animation-delay: 3s;
+        animation-duration: 6s;
+        animation-iteration-count: infinite;
+
+}
+#logout{
+    -webkit-animation: slide-top 1s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
+        animation: slide-top 1s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
+        animation-delay: 3.5s;
         animation-duration: 6s;
         animation-iteration-count: infinite;
 }
