--- a/src/css/search.css
+++ b/src/css/search.css
@@ -9,7 +9,7 @@
     border: 0px 0px 100px 0px solid;
     border-left:solid rgba(255, 255, 255, 0.119);
     border-bottom:solid rgba(255, 255, 255, 0.119);
-    
+}
 #inputSearch{
     background-color : rgba(24, 24, 24, 0);
     border : solid rgba(255, 255, 255, 0.119);
