--- a/src/css/formulaire.css
+++ b/src/css/formulaire.css
@@ -46,13 +46,13 @@ h1{
   }
   
 
-input{
+/* input{
     background-color : rgba(24, 24, 24, 0);
     border : solid rgba(255, 255, 255, 0.119);
 
     border-top: none;
     border-right : none;
-    /* border-left: none; */
+    //border-left: none;
 
     color : white;
     padding: 12px 10px;
@@ -63,14 +63,14 @@ input{
     margin-top: 5px;
     margin-bottom: 5px;
 
-}
-input::placeholder{
+} */
+/* input::placeholder{
     color :rgba(255, 255, 255, 0.549);
 }
 input:focus{
     outline: none;
     border : solid rgb(rgba(255, 255, 255, 0.355));
-}
+} */
 
 .buttonform{
     display: flex;
