--- a/src/css/player.css
+++ b/src/css/player.css
@@ -5,6 +5,7 @@
     flex-direction: column;
     align-items: center;
     padding-bottom: 20px;
+    /* cursor : none; */
 } 
 .playerSecond{
     background-color: #202327 ;
@@ -12,10 +13,53 @@
     margin : 0px;
     height : 40px;
     color : rgba(255,189,0,1);
-    font-size: 35px;
     font-family: Arial, Helvetica, sans-serif;
     font-weight: bold;
     display : flex;
     justify-content: center;
     align-items: center;
 }
+#cursor {
+    cursor : none;
+    width: 40px;
+    height: 40px;
+    pointer-events: none;
+    border: 1px solid rgb(192, 122, 1);
+    border-radius: 50%;
+    position: absolute;
+    z-index : 100;
+  }
+  
+  #cursor::before {
+    content: '';
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+    width: 5px;
+    height: 5px;
+    background: rgb(192, 122, 1);
+    border-radius: 50%;
+  }
+  
+  .expand {
+    pointer-events: none;
+    animation: Anim2 .5s;
+    background: rgb(227, 110, 0);
+    border: 1px solid rgb(200, 97, 0);
+  }
+  
+  
+  
+  @keyframes Anim2 {
+    0%{
+        transform: scale(1);
+    }
+    50%{
+        transform: scale(2);
+    }
+    100%{
+        transform: scale(1);
+        opacity:0;
+    }
+  }
