--- a/src/css/header.css
+++ b/src/css/header.css
@@ -1,22 +1,25 @@
 .navigation{
-    background-color: rgb(109, 103, 103);
     height : 70px;
     width : 100%;
     display : flex;
     align-items: center;
-    /* cursor : none; */
 }
 
 .mainNav{
     display : flex;
-    justify-content: flex-end;
+    justify-content: center;
     width : 100%;
 }
 
+.contentLogo{
+    position : fixed;
+    height : 70px;
+}
+
 #logoHeader{
-    height : 80px;
-    display : flex;
-    padding : 15px;
+    height : 70px;
+    width : auto;
+    padding : 10px;
 }
 
 .navitem{
@@ -26,6 +29,7 @@
     height : 70px;
     color : white;
 }
+
 .navitem:hover{
     color:#FFBD36;
     text-shadow: 0px 0px 10px #1f1f1f;
